--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,8 +1,10 @@
 Changelog
 =========
 
-0.6.2
+0.7.0
 ---------
+  * Updates tailwindcss to 1.2.0
+  * Updates tailwind.config.js
 
 0.6.1
 ---------
