--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,16 @@
 Changelog
 =========
 
+0.9.0
+---------
+  * Updates script commands in package.json
+  * Fixes SASS support
+
+0.8.0
+---------
+  * Updates tailwindcss to 1.4.6
+  * Updates tailwind.config.js
+  
 0.7.0
 ---------
   * Updates tailwindcss to 1.2.0
